@@ -254,7 +254,7 @@ drive_rw = LTO9_drive
 # followed by the "library_name".
 # (The default library name is defined by the above store section
 # default_tape_library parameter.)
-[tlc_library_name]
+[tlc "library_name"]
 # Server address
 hostname = localhost
 port = 20123
