@@ -83,15 +83,15 @@ library = legacy
 [copy]
 default_copy_name = source
 
-[tlc_legacy]
+[tlc "legacy"]
 hostname = localhost
 port = 20123
 lib_device = /dev/changer
 
-[tlc_library_bis]
+[tlc "library_bis"]
 hostname = localhost
 port = 20124
 lib_device = /dev/changer_bis
 
-[tlc_bad_library]
+[tlc "bad_library"]
 lib_device = /no_existing_dev_changer
